--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JavaScript eventdriven storage",
   "main": "index.js",
   "scripts": {
-    "build": "babel src/ -d dist/",
+    "compile": "babel src/ -d lib/",
     "flow": "flow",
     "test": "jest --coverage"
   },
@@ -32,9 +32,10 @@
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-inline-environment-variables": "0.3.0",
     "babel-preset-env": "1.6.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-0": "6.24.1",
     "eslint": "4.18.0",
-    "eslint-config-recommended": "^2.0.0",
+    "eslint-config-recommended": "2.0.0",
     "eslint-plugin-flowtype": "2.44.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jest": "21.12.1",
@@ -44,7 +45,20 @@
     "jest": "22.3.0"
   },
   "dependencies": {
-    "events": "2.0.0",
-    "uuid": "^3.2.1"
+    "uuid": "3.2.1"
+  },
+  "optionalDependencies": {
+    "jspm": "0.16.53",
+    "systemjs": "0.21.0"
+  },
+  "jspm": {
+    "dependencies": {
+      "uuid": "npm:uuid@^3.2.1"
+    },
+    "devDependencies": {
+      "babel": "npm:babel-core@^5.8.24",
+      "babel-runtime": "npm:babel-runtime@^5.8.24",
+      "core-js": "npm:core-js@^1.1.4"
+    }
   }
 }
