--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,15 @@
 {
-  "presets": ["flow"]
+  "presets": ["flow"],
+  "env": {
+    "test": {
+      "presets":[
+        ["env", { "modules": false }],
+        "stage-0"
+      ],
+      "plugins": [
+        "transform-es2015-modules-commonjs",
+        "dynamic-import-node"
+      ]
+    }
+  }
 }
