--- a/.babelrc
+++ b/.babelrc
@@ -3,8 +3,7 @@
   "env": {
     "test": {
       "presets":[
-        ["env", { "modules": false }],
-        "stage-0"
+        ["env", { "modules": false }]
       ],
       "plugins": [
         "transform-es2015-modules-commonjs",
